--- a/ch11/lounge/lounge.css
+++ b/ch11/lounge/lounge.css
@@ -1,7 +1,5 @@
 body {
-    font-size: small;
-    font-family: Verdana, Helvetica, Arial, sans-serif;
-    line-height: 1.6em;
+    font: small/1.6em Verdana, Helvetica, Arial, sans-serif;
 }
 
 h1,
@@ -22,15 +20,13 @@ h2 {
     font-style: italic;
     font-family: Georgia, "Times New Roman", Times, serif;
     color: #444444;
-    border-color: white;
-    border-width: 1px;
-    border-style: dashed;
+    border: 1px dashed white;
     background-color: #a7cece;
     padding: 25px;
     padding-left: 80px;
     margin: 30px;
     margin-right: 250px;
-    background-image: url("images/background.gif");
+    background-image: url(images/background.gif);
     background-repeat: no-repeat;
     background-position: top left;
 }
@@ -39,9 +35,10 @@ h2 {
     border: thin solid #007e7e;
     width: 200px;
     padding: 0px 20px 20px 20px;
-    margin: 0px 0px 0px 20px;
+    margin-left: 20px;
     text-align: center;
-    background: white url(images/cocktail.gif) repeat-x;
+    background-image: url("images/cocktail.gif");
+    background-repeat: repeat-x;
     line-height: 1;
     float: right;
 }
@@ -69,6 +66,14 @@ h2 {
     font-weight: bold;
 }
 
+a:link {
+    color: #007e7e;
+}
+
+a:visited {
+    color: #333333;
+}
+
 #elixirs a:link {
     color: #007e7e;
 }
@@ -82,10 +87,7 @@ h2 {
     color: #0d5353;
 }
 
-a:link {
-    color: #007e7e;
-}
-
-a:visited {
-    color: #333333;
+#amazing {
+    width: 200px;
+    float: right;
 }
